[tool.poetry]
name = "findcorrectform"
version = "0.1.0"
description = ""
authors = ["Dmitry Nekrasov <demonekr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
tinydb = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
